# mitchi

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  app.py  pyproject.toml  requirements.txt
src/modules/bot/: __init__.py
src/modules/bot/chains/: __init__.py
src/modules/bot/parsers/: chatbot_parser.py
src/modules/bot/prompts/: arxiv_topic_prompt.py  background_information_prompt.py  citation_and_referencing_prompt.py  data_analysis_advice_prompt.py  ethical_considerations_prompt.py  general_academic_inquiry_prompt.py  goodbye_prompt.py  greeting_prompt.py  intent_classifier_prompt.py  methodology_guidance_prompt.py  other_prompt.py  research_problem_clarification_prompt.py  research_prompt.py  research_proposal_assistance_prompt.py  research_topic_prompt.py  timeline_planning_prompt.py
src/modules/bot/tools/: arxiv_tool.py
